correct visibility for layers, tabs, pages

--- a/tpl/app/less/stb/ui/layer.item.less
+++ b/tpl/app/less/stb/ui/layer.item.less
@@ -9,10 +9,10 @@
 	width: inherit;
 	height: inherit;
 	display:block;
-	visibility: visible;
+	visibility: inherit;
 
 	&.hidden {
-		display:block;
+		display: block;
 		visibility: hidden;
 	}
 }
