--- a/tpl/app/less/stb/ui/page.less
+++ b/tpl/app/less/stb/ui/page.less
@@ -15,6 +15,6 @@
 
 	// only one active page is visible
 	&.active {
-		visibility: visible
+		visibility: inherit
 	}
 }
