--- a/tpl/app/less/stb/ui/tab.item.less
+++ b/tpl/app/less/stb/ui/tab.item.less
@@ -11,6 +11,6 @@
 	height: inherit;
 
 	&.active {
-		visibility: visible;
+		visibility: inherit;
 	}
 }
